--- a/front/package.json
+++ b/front/package.json
@@ -8,20 +8,24 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.7",
     "antd-dayjs-webpack-plugin": "0.0.8",
+    "antd-theme-generator": "^1.1.9",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
+    "react-color": "^2.18.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "npm run color && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "color": "node color.js"
   },
   "eslintConfig": {
     "extends": "react-app"
